# exhal-master

./: .coverage  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .spritepal_settings.json  =1.5.0  ARCHIVING_COMPLETE_2025_01_15.md  BUGS_FOUND_DURING_TESTING.md  BUG_POSTMORTEM_PROGRESS_DIALOG.md  CAVE_PALETTE_SOLUTION.md  CGRAM.dmp  COMPREHENSIVE_SPRITE_EDITING_GUIDE.md  COVERAGE_IMPROVEMENT_STRATEGY.md  COVERAGE_RESULTS_SUMMARY.md  CROSS_COMPONENT_INTEGRATION_SUMMARY.md  Cave.SnesCgRam.dmp  Cave.SnesCgRam_palette_10.pal.json  Cave.SnesCgRam_palette_11.pal.json  Cave.SnesCgRam_palette_12.pal.json  Cave.SnesCgRam_palette_13.pal.json  Cave.SnesCgRam_palette_14.pal.json  Cave.SnesCgRam_palette_9.pal.json  Cave.SnesSpriteRam.dmp  Cave.SnesVideoRam - Copy_injected.dmp  Cave.SnesVideoRam - Copy_injected_injected.dmp  Cave.SnesVideoRam - Copy_injected_injected_injected.dmp  Cave.SnesVideoRam - Copy_injected_injected_injected_injected.dmp  DEBUGGING_SUMMARY.md  DEFINITIVE_SPRITE_EXTRACTION_GUIDE.md  DELTA_UNDO_INTEGRATION_SUMMARY.md  DEVELOPMENT_BEST_PRACTICES.md  EDIT_ALL_CHARS.txt  ENHANCED_TEST_COVERAGE_REPORT.md  ENHANCED_WORKFLOW_GUIDE.md  ERROR_HANDLING_ANALYSIS.md  FINAL_CHARACTER_SHEET.md  FIX_WINDOWSPATH_JSON_ERROR.md  GRAYSCALE_EDIT_GUIDE.md  GRAYSCALE_PNG_FIX_SUMMARY.md  (+264 more)
spritepal/: .coverage  .gitignore  .runtimevalidationtest_settings.json  .spritepal-test_settings.json  .spritepal-uitest_settings.json  .spritepal_settings.json  .uitest_settings.json  =1.1.0  =6.5.0  ADVANCED_SEARCH_INTEGRATION_SUMMARY.md  AGENT_REF.MD  CACHE_INTEGRATION_IMPLEMENTATION.md  CIRCULAR_IMPORT_FIX.md  CLAUDE.md  CODE_REVIEW_ACTION_PLAN.md  COMPOSED_DIALOG_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_INTEGRATION_TESTS_SUMMARY.md  COMPREHENSIVE_PERFORMANCE_ANALYSIS_SUMMARY.md  COMPREHENSIVE_TEST_VALIDATION_REPORT.md  COMPREHENSIVE_TYPE_ANNOTATIONS_SUMMARY.md  COMPREHENSIVE_VALIDATION_REPORT.md  CRITICAL_FIXES_COMPLETED.md  CRITICAL_FIXES_EXAMPLES.py  CRITICAL_FIXES_SUMMARY.md  CRITICAL_FIX_PLAN_DO_NOT_DELETE.md  CRITICAL_FIX_PLAN_FINAL_REPORT.md  DEPENDENCY_INJECTION_ARCHITECTURE.md  DIALOGBASE_DEPRECATION_PLAN.md  DIVISION_BY_ZERO_FIXES.md  ENVIRONMENT_HEALTH_REPORT.md  FEATURE_FLAG_USAGE.md  FRAMEWORK_DIALOGS_MIGRATION.md  FULLSCREEN_SPRITE_VIEWER_README.md  GALLERY_LAYOUT_TEST_README.md  GRID_ARRANGEMENT_GUIDE.md  HEADLESS_QT_FIX.md  HIGH_PRIORITY_INTEGRATION_TEST_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPORT_ORGANIZATION_GUIDELINES.md  (+479 more)
spritepal/.serena/: project.yml
spritepal/.venv_temp/: pyvenv.cfg
spritepal/agents/: AGENT_QUICK_REFERENCE.md
spritepal/archive_2025_07_19/: ARCHIVE_SUMMARY.md
spritepal/benchmark_output/: sprite_search_report_tmp1hh017y2.smc.txt  sprite_search_results_tmp1hh017y2.smc.json
spritepal/benchmarks/: dialog_performance_benchmark.py
spritepal/config/: sprite_locations.json
spritepal/core/: __init__.py  async_rom_cache.py  console_error_handler.py  controller.py  default_palette_loader.py  di_container.py  extractor.py  hal_compression.py  injector.py  mmap_rom_reader.py  monitoring.py  optimized_rom_extractor.py  optimized_thumbnail_generator.py  palette_manager.py  parallel_sprite_finder.py  preview_orchestrator.py  region_analyzer.py  rom_extractor.py  rom_injector.py  rom_palette_extractor.py  rom_validator.py  sprite_config_loader.py  sprite_finder.py  sprite_validator.py  sprite_visual_validator.py  thumbnail_cache.py  tile_renderer.py  type_constants.py  type_guards.py  visual_similarity_search.py
spritepal/docs/: CI_CD_QUALITY_GATES.md  LAYOUT_FIX_SUMMARY.md  PARALLEL_TESTING_GUIDE.md  PYTEST_MARKERS_GUIDE.md  QT_TESTING_BEST_PRACTICES.md  QT_TESTING_PATTERNS_ESTABLISHED.md  REAL_COMPONENT_TESTING_GUIDE.md  SMART_PREVIEW_DESIGN_GUIDE.md  SPRITE_EXTRACTION_FIX_SUMMARY.md  architecture.md  dialog_development_guide.md  error_handler_migration_guide.md  file_validator_refactoring_summary.md  found_sprites_registry_refactoring.md  import_location_warnings.md  improved_testing_patterns.md  legacy_cleanup_analysis.md  manual_offset_dialog_architecture_analysis.md  preview_generator_integration_example.py  pytest_pattern_fixes.md  qt_architecture_analysis.md  qt_boolean_evaluation_pitfall.md  service_adapters_guide.md  smart_offset_control_implementation_plan.md  smart_preview_implementation_example.py  testing_gaps_analysis.md  unified_error_handler_guide.md
spritepal/examples/: dependency_injection_migration.py  monitoring_integration_examples.py
spritepal/performance_analysis/: hal_compression_shutdown_20250805_175123.prof  hal_compression_shutdown_20250805_175123_stats.txt  injection_dialog_validation_20250805_175124.prof  injection_dialog_validation_20250805_175124_stats.txt  qt_signal_performance_20250805_175124.prof  qt_signal_performance_20250805_175124_stats.txt  refactoring_analysis_summary_20250805_175124.txt  refactoring_performance_report_20250805_175124.json  rom_extraction_workflow_20250805_175124.prof  rom_extraction_workflow_20250805_175124_stats.txt
spritepal/performance_profilers/: manual_offset_performance_profiler.py
spritepal/scripts/: analyze_imports.py  audit_qt_boolean_checks.py  categorize_tests_with_markers.py  check_type_errors.py  code_validation.py  detect_init_order_bugs.py  fix_attribute_errors.py  fix_attribute_errors_safe.py  fix_mock_parent_issues.py  fix_pytest_patterns.py  fix_remaining_mock_issues.py  generate_quality_report.py  install_memory_profiling_deps.py  install_performance_deps.py  launch_detached_gallery.py  mark_serial_tests.py  migrate_qt_tests.py  monitor_mock_density.py  profile_dialog_leaks.py  run_memory_leak_tests.py  run_parallel_tests.py  run_performance_validation.py  run_stability_tests.py  show_critical_errors.py  sprite_clipboard_monitor.py  typecheck_analysis.py  validation_usage_examples.py
spritepal/tests/: EXCESSIVE_MOCKING_REFACTORING_REPORT.md  HEADLESS_TESTING.md  INFRASTRUCTURE_MODERNIZATION_SUMMARY.md  MANAGER_REAL_TESTING_IMPROVEMENTS.md  MIGRATION_SUMMARY.md  PATCH_OBJECT_REDUCTION_PROGRESS.md  PATCH_OBJECT_REDUCTION_SUMMARY.md  README.md  (+242 more)
(+650 files in other folders)
