[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spritepal"
version = "0.1.0"
description = "SNES Sprite Editor for Kirby Super Star"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "SpritePal Contributors"}
]
keywords = ["snes", "sprite", "editor", "kirby", "retro", "gaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics :: Editors",
]

dependencies = [
    "PySide6>=6.5.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.3.0",
    "pytest-cov>=4.1.0",
    "pytest-xvfb>=3.0.0",
    "ruff>=0.8.0",
    "basedpyright>=1.18.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/your-username/spritepal"
Repository = "https://github.com/your-username/spritepal"

[project.scripts]
spritepal = "spritepal.launch_spritepal:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spritepal*"]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
line-length = 120
target-version = "py311"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "venv",
    "migration_report.txt",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]

ignore = [
    # Formatting (handled by formatter or not critical)
    "E501",     # line length
    "W291",     # trailing-whitespace
    "W293",     # blank-line-with-whitespace

    # Import ordering (Qt apps need delayed imports)
    "E402",     # module level import not at top
    "PLC0415",  # import-outside-top-level

    # Complexity (complex Qt widgets are normal)
    "PLR0912",  # too-many-branches
    "PLR0915",  # too-many-statements
    "PLR0911",  # too-many-return-statements

    # Style preferences (not bugs)
    "SIM102",   # collapsible-if
    "SIM105",   # suppressible-exception
    "SIM108",   # if-else-block-instead-of-if-exp
    "SIM117",   # multiple-with-statements
    "SIM103",   # needless-bool
    "SIM115",   # open-file-with-context-handler
    "E712",     # true-false-comparison

    # Qt-specific patterns
    "RUF012",   # mutable class default
    "RUF059",   # unused-unpacked-variable (common in signal handlers)
    "B007",     # unused-loop-control-variable

    # Not critical for this app
    "DTZ005",   # datetime-now-without-tzinfo
    "PTH123",   # builtin-open
    "PTH110",   # os-path-exists
    "PTH109",   # os-getcwd
    "PTH113",   # os-path-isfile
    "RUF001",   # ambiguous-unicode-character-string
    "B023",     # function-uses-loop-variable (common in Qt callbacks)
    "RUF034",   # useless-if-else
    "RUF005",   # collection-literal-concatenation
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__ files
"tests/**/*.py" = ["S101", "PLR2004", "B017", "B018", "RUF043"]  # test-specific patterns
"**/test_*.py" = ["S101", "PLR2004", "B017", "B018", "RUF043", "F401"]  # test files
"spritepal/test_*.py" = ["S101", "PLR2004", "B017", "B018", "RUF043", "F401"]  # root test files
"spritepal/mesen2_integration/*.py" = ["E722", "B904"]  # experimental integration scripts
"spritepal/scripts/*.py" = ["E722", "B904", "F401"]  # utility scripts

# ============================================================================
# Basedpyright Configuration
# ============================================================================
[tool.basedpyright]
include = ["spritepal/core", "spritepal/ui", "spritepal/utils"]
exclude = [
    "**/__pycache__",
    "**/.*",
    "build",
    "dist",
    "spritepal/tests",
]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["spritepal/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests (fast, no Qt required)",
    "integration: Integration tests",
    "gui: Tests requiring Qt display",
    "headless: Tests that work without display",
    "slow: Slow tests",
    "serial: Tests that cannot run in parallel",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["spritepal"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
