[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spritepal"
version = "0.1.0"
description = "SNES Sprite Editor for Kirby Super Star"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "SpritePal Contributors"}
]
keywords = ["snes", "sprite", "editor", "kirby", "retro", "gaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics :: Editors",
]

dependencies = [
    "PySide6>=6.5.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.3.0",
    "pytest-cov>=4.1.0",
    "pytest-xvfb>=3.0.0",
    "ruff>=0.8.0",
    "basedpyright>=1.18.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/your-username/spritepal"
Repository = "https://github.com/your-username/spritepal"

[project.scripts]
spritepal = "spritepal.launch_spritepal:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spritepal*"]

# ============================================================================
# Ruff Configuration (Strict)
# ============================================================================
[tool.ruff]
line-length = 120
target-version = "py311"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "venv",
    "migration_report.txt",
    "archive*",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "N",      # pep8-naming
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "T20",    # flake8-print (no print statements)
    "PT",     # flake8-pytest-style
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "PIE",    # flake8-pie
    "PL",     # pylint
    "TRY",    # tryceratops (exception handling)
    "PERF",   # perflint (performance)
    "FURB",   # refurb (modern Python)
    "LOG",    # flake8-logging
    "EM",     # flake8-errmsg
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420 (require __init__.py)
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "ERA",    # eradicate (commented-out code)
    "FBT",    # flake8-boolean-trap
    "ICN",    # flake8-import-conventions
    "PYI",    # flake8-pyi (type stub rules)
]

ignore = [
    # Quotes - too noisy for no bug-catching value
    "Q",        # flake8-quotes (style only)
    # Formatting (handled by formatter)
    "E501",     # line length (120 is fine, don't be pedantic)
    "W291",     # trailing-whitespace
    "W293",     # blank-line-with-whitespace

    # Import ordering (Qt apps need delayed imports for circular deps)
    "E402",     # module level import not at top
    "PLC0415",  # import-outside-top-level

    # Complexity (Qt widgets can be complex, but track it)
    "PLR0912",  # too-many-branches (>12)
    "PLR0915",  # too-many-statements (>50)
    "PLR0911",  # too-many-return-statements
    "PLR0913",  # too-many-arguments (Qt signals have many)
    "PLR2004",  # magic-value-comparison (common in pixel math)
    "PLR0904",  # too-many-public-methods (Qt classes)

    # Style preferences that don't catch bugs
    "SIM102",   # collapsible-if (readability preference)
    "SIM108",   # if-else-block-instead-of-if-exp (ternary)
    "SIM117",   # multiple-with-statements
    "SIM115",   # open-file-with-context-handler

    # Qt-specific patterns (legitimate usage)
    "RUF012",   # mutable class default (Qt signals)
    "RUF059",   # unused-unpacked-variable (signal handlers)
    "ARG002",   # unused-method-argument (Qt overrides)
    "ARG001",   # unused-function-argument (Qt callbacks)
    "ARG003",   # unused-class-method-argument (Qt overrides)
    "ARG004",   # unused-static-method-argument
    "ARG005",   # unused-lambda-argument (Qt callbacks)
    "B007",     # unused-loop-control-variable (Qt iteration)
    "B023",     # function-uses-loop-variable (Qt callbacks)

    # Security (not a web app, user controls input)
    "S101",     # assert-used (fine for desktop apps)
    "S108",     # hardcoded temp file (we use proper temp handling)
    "S110",     # try-except-pass (often legitimate in Qt)
    "S112",     # try-except-continue (often legitimate)
    "S301",     # suspicious-pickle-usage (legitimate for serialization)
    "S311",     # pseudo-random-generator (not cryptographic)
    "S324",     # insecure-hash-function (md5 for checksums, not crypto)
    "S603",     # subprocess-without-shell-equals-true
    "S607",     # start-process-with-partial-path

    # Exceptions (Qt has its own patterns)
    "TRY002",   # raise-vanilla-class (raise Exception is fine)
    "TRY003",   # raise-vanilla-args (Qt exceptions)
    "TRY300",   # consider-else-block (style preference)
    "TRY301",   # raise-within-except (can be legitimate)
    "TRY400",   # logging-error-instead-of-exception
    "TRY401",   # verbose-log-message (f-strings in logging fine)
    "EM101",    # raw-string-in-exception
    "EM102",    # f-string-in-exception

    # Boolean trap (Qt APIs use bool params extensively)
    "FBT001",   # boolean-positional-arg-in-function-definition
    "FBT002",   # boolean-default-value-positional-argument
    "FBT003",   # boolean-positional-value-in-function-call

    # Print statements (CLI tools need them)
    "T201",     # print-found

    # Type checking imports (handled by TYPE_CHECKING blocks)
    "TC001",    # typing-only-first-party-import (renamed from TCH001)
    "TC002",    # typing-only-third-party-import (renamed from TCH002)
    "TC003",    # typing-only-standard-library-import (renamed from TCH003)
    "TC006",    # type-checking annotation in TYPE_CHECKING block

    # Naming (Qt uses camelCase for overrides)
    "N802",     # invalid-function-name (Qt overrides like paintEvent)
    "N803",     # invalid-argument-name (Qt params like QWidget)
    "N806",     # non-lowercase-variable-in-function
    "N813",     # camelcase-imported-as-lowercase
    "N815",     # mixed-case-variable-in-class-scope
    "N812",     # lowercase-imported-as-non-lowercase
    "N818",     # error-suffix-on-exception-name

    # Other pragmatic ignores
    "INP001",   # implicit-namespace-package (scripts don't need __init__)
    "RET504",   # unnecessary-assign (readability)
    "RET505",   # superfluous-else-return (style preference)
    "RET506",   # superfluous-else-raise (style preference)
    "PIE790",   # unnecessary-pass (explicit pass is fine)
    "PERF203",  # try-except-in-loop (Qt event loops)
    "PERF401",  # manual-list-comprehension (readability)
    "PLW1510",  # subprocess-run-without-check (intentional)
    "PLW2901",  # redefined-loop-name (common pattern)
    "G004",     # logging-f-string (f-strings are fine)
    "PYI034",   # non-self-return-type (PEP 673 __new__)
    "PYI036",   # bad-exit-annotation (not using stubs)
    "PYI041",   # redundant-numeric-union (int | float -> float)
    "PYI024",   # collections-named-tuple (not using stubs)
    "E712",     # true-false-comparison (sometimes intentional)
    "SIM105",   # suppressible-exception (suppress vs try/except style)
    "SIM103",   # needless-bool (return bool comparison)
    "ERA001",   # commented-out-code (too many false positives)
    "ICN001",   # unconventional-import-alias (numpy as np is fine)
    "PLW0603",  # global-statement (sometimes needed for singletons)
    "RUF034",   # useless-if-else (style preference)
    "G003",     # logging-plus-concat (string concat in logging)
    "G201",     # logging-exc-info (error with exc_info is fine)
    "PIE810",   # call-single-arg-startswith-endswith
    "LOG015",   # root-logger-call (fine for desktop app)
    "PT013",    # incorrect-pytest-import (import pytest.raises)
    "PYI056",   # unsupported-method-call-on-typevar
    "PLR1704",  # redefining-argument-with-local-name
    "A002",     # shadowing-builtin (many Qt methods use id, type, etc.)
    "A001",     # shadowing-builtin-variable
    "TRY004",   # type-check-without-type-error
    "PERF402",  # manual-list-copy
    "PLW1641",  # eq-without-hash
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]  # unused imports, import order
"tests/**/*.py" = [
    "S",        # security (test code is not production)
    "PLR2004",  # magic values
    "B017",     # assert raises
    "B018",     # useless expression
    "RUF",      # ruff rules (ambiguous unicode, etc.)
    "ARG",      # unused arguments in test fixtures
    "PT",       # pytest style (flexible in tests)
    "ERA001",   # commented code (test examples)
    "N",        # naming (test functions can be descriptive)
]
"**/test_*.py" = [
    "S", "PLR2004", "B017", "B018", "RUF", "F401",
    "ARG", "PT", "ERA001", "N",
]
"spritepal/test_*.py" = [
    "S", "PLR2004", "B017", "B018", "RUF", "F401",
    "ARG", "PT", "ERA001", "N",
]
"spritepal/mesen2_integration/*.py" = ["E722", "B904", "T201", "S"]  # experimental scripts
"spritepal/scripts/*.py" = ["E722", "B904", "F401", "T201", "INP001", "RUF"]  # utility scripts
"spritepal/tests/scripts/*.py" = ["RUF", "S", "ARG", "N"]  # test scripts
"conftest.py" = ["ARG", "PT"]  # pytest fixtures

[tool.ruff.lint.isort]
known-first-party = ["spritepal"]
force-single-line = false
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"numpy" = "np"
"PIL.Image" = "PILImage"

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 8
max-statements = 60

# ============================================================================
# Basedpyright Configuration (Strict)
# ============================================================================
[tool.basedpyright]
include = ["spritepal/core", "spritepal/ui", "spritepal/utils"]
exclude = [
    "**/__pycache__",
    "**/.*",
    "build",
    "dist",
    "spritepal/tests",
    "spritepal/mesen2_integration",
    "spritepal/scripts",
]
pythonVersion = "3.11"
pythonPlatform = "All"

# Use standard mode as base, enable additional checks selectively
typeCheckingMode = "standard"

# ---- Enable additional checks beyond standard ----
reportMissingImports = true
reportInvalidTypeForm = true
reportDuplicateImport = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportAssertAlwaysTrue = true
reportSelfClsParameterName = true
reportInvalidStubStatement = true
reportIncompleteStub = true
reportUndefinedVariable = true
reportUnboundVariable = true
reportInvalidStringEscapeSequence = true
reportMatchNotExhaustive = true
reportShadowedImports = true

# ---- Keep at warning level (catch issues but don't block) ----
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportMissingTypeArgument = "warning"
reportUnreachable = "warning"

# ---- Relax for Qt/GUI pragmatism ----
reportMissingTypeStubs = false              # Many Qt types lack stubs
reportUnknownParameterType = false          # Qt callbacks often untyped
reportUnknownArgumentType = false           # Qt signal/slot args
reportUnknownLambdaType = false             # Lambda in Qt connections
reportUnknownVariableType = false           # Qt dynamic attributes
reportUnknownMemberType = false             # Qt dynamic members
reportUnnecessaryTypeIgnoreComment = false  # Allow defensive ignores
reportUnusedCallResult = false              # Qt methods return values we ignore
reportImplicitOverride = false              # Qt overrides don't need @override
reportAny = false                           # Qt uses Any extensively
reportExplicitAny = false                   # Allow explicit Any for Qt
reportPrivateUsage = false                  # Qt internals often accessed
reportConstantRedefinition = false          # Conditional platform constants
reportMissingParameterType = false          # Many Qt callbacks untyped
reportMissingReturnType = false             # Decorators often obscure return types
reportUntypedFunctionDecorator = false      # Many decorators untyped
reportUntypedClassDecorator = false         # Same issue
reportUntypedBaseClass = false              # Some Qt mixins untyped
reportCallInDefaultInitializer = false      # Qt patterns use this
reportImplicitStringConcatenation = false   # Common in long strings
reportPrivateImportUsage = false            # Internal imports common
reportTypeCommentUsage = false              # Legacy code
reportUntypedNamedTuple = false             # Some legacy tuples

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["spritepal/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests (fast, no Qt required)",
    "integration: Integration tests",
    "gui: Tests requiring Qt display",
    "headless: Tests that work without display",
    "slow: Slow tests",
    "serial: Tests that cannot run in parallel",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["spritepal"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
