[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spritepal"
version = "2.0.0"
description = "SNES sprite extraction and injection tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SpritePal Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.5.0",
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "pytest-xvfb>=3.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
    "basedpyright>=1.8.0",
    "mypy>=1.5.0",
]

[tool.basedpyright]
# Use recommended mode with additional strictness for tests
typeCheckingMode = "recommended"
pythonVersion = "3.9"
pythonPlatform = "All"
venvPath = "."
venv = "venv"

# Include test files for comprehensive type checking
include = [
    ".",
    "tests"
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/venv",
    "**/.venv", 
    "**/archive",
    "**/archive_2025_07_19",
    "**/build",
    "**/dist",
    "**/*.egg-info",
    "**/tools"
]

# Enhanced type checking for test files
reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportUnknownMemberType = false
reportUnknownArgumentType = true
reportUnknownVariableType = true
reportUnknownParameterType = true
reportUntypedFunctionDecorator = false
reportUntypedClassDecorator = false
reportOptionalMemberAccess = true
reportOptionalSubscript = true
reportPrivateUsage = false

# Basedpyright-specific enhancements
strictGenericNarrowing = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportAny = "warning"
reportExplicitAny = "error"
reportIgnoreCommentWithoutRule = "error"
reportInvalidCast = "error"
reportUnnecessaryTypeIgnoreComment = "error"

# Test-specific type checking rules
reportMissingTypeArgument = true
reportCallInDefaultInitializer = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportAssertAlwaysTrue = false  # Common in test assertions
reportConstantRedefinition = false  # Common in test fixtures

[tool.ruff]
# Include test files for comprehensive linting
exclude = [
    "analyze_*.py",
    "demo_*.py", 
    "fix_*.py",
    "check_*.py",
    "validate_*.py",
    "build_*.py",
    "run_*.py",
    "runtime_*.py",
    "memory_*.py",
    "pattern_*.py",
    "quick_*.py",
    "*_test.py",
    "scripts/analysis/**",
    "scripts/install_*.py",
    "scripts/profile_*.py",
    "scripts/run_*.py",
    "archive_2025_08_09/**"
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade (modern type syntax)
    "TCH",  # flake8-type-checking (TYPE_CHECKING imports)
    "ANN",  # flake8-annotations (missing type annotations)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "ISC",  # flake8-implicit-str-concat
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "PTH",  # flake8-use-pathlib
    "PD",   # pandas-vet
    "PLC",  # pylint conventions
    "PLE",  # pylint errors
    "PLR",  # pylint refactor
    "PLW",  # pylint warnings
    "RUF",  # ruff-specific rules
]

ignore = [
    "E501",    # line too long (handled by formatter)
    "N802",    # function name should be lowercase (Qt overrides)
    "N806",    # variable in function should be lowercase (Qt constants)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison  
    "RET504",  # unnecessary variable assignment before return
    "SIM108",  # use ternary operator
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "ANN401",  # dynamically typed expressions (Any) disallowed
]

[tool.ruff.lint.per-file-ignores]
# Qt method overrides require specific naming
"ui/**/*.py" = ["N802", "N806"]
# AST visitors require visit_* naming  
"**/ast*.py" = ["N802"]
"**/visitor*.py" = ["N802"]
# Test files can have more flexible naming, assertions, and type usage
"tests/**/*.py" = ["N802", "PLR2004", "S101", "ANN201", "ANN202"]
# Allow Any in test protocols and mocks
"tests/infrastructure/test_protocols.py" = ["ANN401"]
"tests/infrastructure/mock_*.py" = ["ANN401"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "PySide6.QtCore.QObject", 
    "PySide6.QtWidgets.QWidget",
    "PySide6.QtWidgets.QDialog",
    "unittest.mock.Mock"
]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.lint.isort]
known-first-party = ["core", "ui", "utils", "tests"]

[tool.ruff.lint.pylint]
max-args = 8
max-returns = 6
max-branches = 12
max-statements = 50

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v", 
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--qt-log-level-fail=CRITICAL"
]
markers = [
    "gui: GUI tests requiring display/X11 environment",
    "headless: Tests that can run without display",
    "mock_only: Tests using only mocked components",
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests",
    "slow: Slow tests (>1s execution time)",
    "qt_real: Tests using real Qt components",
    "qt_mock: Tests using mocked Qt components",
    "serial: Tests that must run in serial",
    "parallel_safe: Tests confirmed safe for parallel execution",
]